# textToSQLFLow

./: .env  .gitignore  CLAUDE.md  Dockerfile.cli  Dockerfile.gateway  README.md  SUMMARY.md  docker-compose.yml  gateway.yaml  pyproject.toml  requirements.txt  sample.txt  text-to-sql-flow.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/reports/: MILESTONE_SUMMARY-v1.1.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/: 1.json
gateway/: __init__.py  cache.py  config.py  llm.py  main.py  models.py  rate_limiter.py
output/flow-6dfe517c/: INACTIVE_CUSTOMERS_90_DAYS_flow.json  INACTIVE_CUSTOMERS_90_DAYS_report.html
output/flow-7b857e01/: ETL_Identify_Inactive_Customers_flow.json  ETL_Identify_Inactive_Customers_report.html  Identify_inactive_customers_in_last_90_days_flow.json  Identify_inactive_customers_in_last_90_days_report.html  description.txt  inactive_customers_90_days_flow.json  inactive_customers_90_days_report.html
tests/: test_batch.py  test_cli.py  test_config.py  test_config_manager.py  test_dag_optimizer.py  test_evaluator.py  test_gateway.py  test_gateway_e2e.py  test_integration.py  test_interactive.py  test_parser.py  test_pipeline.py  test_table_metadata.py  test_types.py  test_writer.py
text_to_sql_flow/: __init__.py  __main__.py  batch.py  cli.py  config.py  config_manager.py  evaluator.py  interactive.py  pipeline.py  types.py
text_to_sql_flow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+50 files in other folders)
