[project]
name = "text-to-sql-flow"
version = "0.1.0"
description = "CLI tool for generating Spark SQL ETL flows from business descriptions using LLM"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.5",
    "httpx>=0.27",
    "openai>=1.0",
    "rich>=13.0",
    "litellm>=1.40",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
]

[project.scripts]
text-to-sql-flow = "text_to_sql_flow.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["text_to_sql_flow*"]
exclude = ["output*"]
